# stridx

./: CMakeLists.txt  Makefile  README.md  demo.cpp  flist.txt  gem_install  py_example.py  py_interf.cpp  ruby_interf.cpp  runserver.rb  server.rb  setup.py  stridx-daemon.rb  stridx-tty.rb  stridx.gemspec  stridx.hpp  test.rb  thread_pool.hpp  unit_tests.sh  unittest.cpp
exe/: stridx.rb
rubyext/: extconf.rb  ruby_interf.cpp  test.rb
